# python-for-data-science

./: .gitignore
learnPython/: readme.txt
learnPython/00Tutorial/: 00GetStarted.py  01Syntax.py  02Comments.py  030Variables.py  031VariableNames.py  032AssignMultipleValues.py  033OutputVariables.py  034GlobalVariables.py  04DataTypes.py  readme.txt
learnPython/01FileHandling/: 00FileHandling.py  01ReadFiles.py  02WriteCreateFiles.py  03DeleteFiles.py  readme.txt
python-0-starting/ex00/: Hello.py
python-0-starting/ex01/: format_ft_time.py
python-0-starting/ex02/: find_ft_type.py  tester.py
python-0-starting/ex03/: NULL_not_found.py  tester.py
python-0-starting/ex04/: whatis.py
python-0-starting/ex05/: building.py
python-0-starting/ex06/: filterstring.py  ft_filter.py  test.py
python-0-starting/ex07/: sos.py
python-0-starting/ex08/: Loading.py  tester.py
python-0-starting/ex09/ft_package/: LICENSE  README.md  pyproject.toml  readme.txt
python-0-starting/ex09/ft_package/src/ft_package/: __init__.py  main.py
python-0-starting/ex09/ft_package/tests/: main.py
python-1-array/ex00/: give_bmi.py  tester.py
python-1-array/ex01/: array2D.py  tester.py
python-1-array/ex02/: load_image.py
